# VisaMentor-AI

./: README.md  pyproject.toml  requirements.txt
notebook/: document.ipynb  pdf_loader.ipynb
